# sifter

./: .gitignore  README.md  initial-prompt.md
code/: .env.example  Dockerfile  README.md  pyproject.toml  run.sh
code/examples/: 01_quickstart.py  02_invoices.py  03_contracts.py  04_folder_pipeline.py  05_query_and_chat.py  06_webhooks.py  quickstart.py
code/frontend/: package-lock.json  package.json  vite.config.ts
code/frontend/src/: App.tsx  index.css
code/mcp/sifter_mcp/: server.py
code/sdk/: README.md  pyproject.toml
code/sdk/sifter/: __init__.py  client.py
code/sdk/sifter_sdk/: __init__.py  client.py
code/server/: Dockerfile  README.md  pyproject.toml  run.sh
code/server/sifter/: __init__.py  config.py  server.py
code/server/sifter_server/: auth.py  config.py  server.py
code/server/tests/: test_api.py  test_api_folders_webhooks.py  test_auth_and_keys.py  test_extraction_agent.py  test_pipeline_agent.py  test_sdk.py
code/sifter/: __init__.py  auth.py  config.py  deps.py  main.py  server.py
code/sifter/api/: aggregations.py  auth.py  chat.py  documents.py  extractions.py  folders.py  keys.py  orgs.py  sifts.py  webhooks.py
code/sifter/models/: __init__.py  aggregation.py  document.py  extraction.py  extraction_result.py  processing_task.py  sift.py  sift_result.py  user.py  webhook.py
code/sifter/sdk/: __init__.py  client.py
code/sifter/services/: __init__.py  aggregation_service.py  api_key_service.py  email.py  (+10 more)
code/tests/: test_api.py  test_api_folders_webhooks.py  test_auth_and_keys.py  test_extraction_agent.py  test_sdk.py
(+100 files in other folders)
