[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sifter-ai"
version = "0.1.0"
description = "AI-powered document extraction engine — turn unstructured documents into a queryable database"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Sifter Contributors" }]
keywords = ["document", "extraction", "ai", "mongodb", "llm", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "motor>=3.4.0",
    "pymongo>=4.7.0",
    "litellm>=1.40.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
sifter = "sifter.main:run"

[project.urls]
Homepage = "https://github.com/sifter-ai/sifter"
Repository = "https://github.com/sifter-ai/sifter"

[tool.hatch.build.targets.wheel]
packages = ["sifter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
